docs/lab/crashloop-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: crashloop-demo
spec:
  containers:
  - name: badapp
    image: busybox
    command: ["sh", "-c", "exit 1"]
