docs/lab/mysql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  containers:
  - name: mysql
    image: busybox
    command: ['sh', '-c', "while true; do echo 'Mock MySQL' | nc -l -p 3306; done"]
    ports:
    - containerPort: 3306
