docs/lab/pvc-demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-demo-pod
spec:
  containers:
  - name: demo
    image: busybox
    command: ["/bin/sh", "-c", "sleep 3600"]
    volumeMounts:
    - mountPath: "/data"
      name: data-vol
  volumes:
  - name: data-vol
    persistentVolumeClaim:
      claimName: pvc-demo
