docs/lab/test-client.yaml
# test-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-client
spec:
  containers:
  - name: client
    image: busybox
    command: ['sh', '-c', 'sleep 3600']
