docs/lab/app-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-loadbalancer
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
spec:
  type: LoadBalancer
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
