docs/lab/mysql-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
  clusterIP: None  # No Cluster IP allocated
