docs/lab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ligand-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ligand.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ligand-expo
            port:
              number: 8080
